--- a/src/main/java/gui/mainMenu.fxml
+++ b/src/main/java/gui/mainMenu.fxml
@@ -1,12 +1,96 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <VBox prefHeight="400.0" prefWidth="523.0" />
-      <VBox prefHeight="200.0" prefWidth="100.0" />
-   </children>
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0"
+      prefWidth="1200.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+    <children>
+        <VBox prefHeight="600.0" prefWidth="1000.0">
+            <children>
+                <ScrollPane prefHeight="600.0" prefWidth="1000.0">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="983.0">
+                            <children>
+                                <GridPane prefHeight="600.0" prefWidth="983.0">
+                                    <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="246.0"/>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="246.0"/>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="246.0"/>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="246.0"/>
+                                    </columnConstraints>
+                                    <rowConstraints>
+                                        <RowConstraints minHeight="10.0" prefHeight="200.0" vgrow="SOMETIMES"/>
+                                        <RowConstraints minHeight="10.0" prefHeight="200.0" vgrow="SOMETIMES"/>
+                                        <RowConstraints minHeight="10.0" prefHeight="200.0" vgrow="SOMETIMES"/>
+                                    </rowConstraints>
+                                    <children>
+                                        <Pane prefHeight="200.0" prefWidth="246.0" GridPane.columnIndex="2"/>
+                                        <Pane prefHeight="200.0" prefWidth="246.0" GridPane.columnIndex="1"/>
+                                        <Pane prefHeight="200.0" prefWidth="246.0"/>
+                                        <Pane prefHeight="200.0" prefWidth="246.0" GridPane.columnIndex="3"/>
+                                        <Pane prefHeight="200.0" prefWidth="246.0" GridPane.rowIndex="1"/>
+                                        <Pane prefHeight="200.0" prefWidth="246.0" GridPane.rowIndex="2"/>
+                                        <Pane prefHeight="200.0" prefWidth="246.0" GridPane.columnIndex="1"
+                                              GridPane.rowIndex="1"/>
+                                        <Pane prefHeight="200.0" prefWidth="246.0" GridPane.columnIndex="1"
+                                              GridPane.rowIndex="2"/>
+                                        <Pane prefHeight="200.0" prefWidth="246.0" GridPane.columnIndex="2"
+                                              GridPane.rowIndex="1"/>
+                                        <Pane prefHeight="200.0" prefWidth="246.0" GridPane.columnIndex="3"
+                                              GridPane.rowIndex="1"/>
+                                        <Pane prefHeight="200.0" prefWidth="246.0" GridPane.columnIndex="3"
+                                              GridPane.rowIndex="2"/>
+                                        <Pane prefHeight="200.0" prefWidth="246.0" GridPane.columnIndex="2"
+                                              GridPane.rowIndex="2"/>
+                                    </children>
+                                </GridPane>
+                            </children>
+                        </AnchorPane>
+                    </content>
+                </ScrollPane>
+            </children>
+        </VBox>
+        <VBox prefHeight="600.0" prefWidth="200.0">
+            <children>
+                <VBox prefHeight="56.0" prefWidth="200.0">
+                    <children>
+                        <Pane prefHeight="59.0" prefWidth="200.0">
+                            <children>
+                                <TreeView layoutX="10.0" layoutY="12.0" prefHeight="38.0" prefWidth="180.0"/>
+                            </children>
+                        </Pane>
+                    </children>
+                </VBox>
+                <VBox prefHeight="543.0" prefWidth="200.0">
+                    <children>
+                        <Pane fx:id="rortField" prefHeight="545.0" prefWidth="200.0">
+                            <children>
+                                <ComboBox layoutX="32.0" layoutY="114.0" prefWidth="150.0"/>
+                                <TextArea layoutX="33.0" layoutY="150.0" prefHeight="31.0" prefWidth="149.0"
+                                          promptText="search name"/>
+                                <TextField layoutX="32.0" layoutY="200.0" prefHeight="31.0" prefWidth="149.0"
+                                           promptText="SEARCH BRAND"/>
+                                <CheckBox layoutX="24.0" layoutY="356.0" mnemonicParsing="false" prefHeight="25.0"
+                                          prefWidth="75.0" text="offs"/>
+                                <ComboBox layoutX="24.0" layoutY="391.0" prefWidth="150.0"/>
+                                <Label layoutX="114.0" layoutY="360.0" prefHeight="17.0" prefWidth="60.0" text="sort "/>
+                                <Label layoutX="14.0" layoutY="423.0" prefHeight="17.0" prefWidth="60.0"
+                                       text="start date"/>
+                                <Label layoutX="14.0" layoutY="474.0" prefHeight="17.0" prefWidth="60.0"
+                                       text="end date"/>
+                                <DatePicker layoutX="12.0" layoutY="449.0"/>
+                                <DatePicker layoutX="13.0" layoutY="498.0"/>
+                                <Label layoutX="32.0" layoutY="86.0" prefHeight="17.0" prefWidth="60.0" text="product"/>
+                                <Label layoutX="127.0" layoutY="86.0" prefHeight="17.0" prefWidth="60.0" text="sort "/>
+                                <ColorPicker layoutX="43.0" layoutY="42.0"/>
+                                <Label layoutX="28.0" layoutY="14.0" prefHeight="17.0" prefWidth="157.0"
+                                       text="choose your background"/>
+                            </children>
+                        </Pane>
+                    </children>
+                </VBox>
+            </children>
+        </VBox>
+    </children>
 </HBox>
