--- a/src/main/java/gui/mainMenu.fxml
+++ b/src/main/java/gui/mainMenu.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TreeView?>
@@ -17,15 +18,15 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox fx:id="pageHBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<HBox fx:id="pageHBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1200.0" stylesheets="@Mainmenu.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <VBox fx:id="productsVBox" prefHeight="600.0" prefWidth="1000.0">
+        <VBox fx:id="productsVBox" prefHeight="600.0" prefWidth="1000.0" stylesheets="@Mainmenu.css">
             <children>
-                <ScrollPane fx:id="productsScrollPain" prefHeight="600.0" prefWidth="1000.0">
+                <ScrollPane fx:id="productsScrollPain" prefHeight="600.0" prefWidth="1000.0" stylesheets="@Mainmenu.css">
                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="983.0">
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="983.0" stylesheets="@Mainmenu.css">
                             <children>
-                                <GridPane fx:id="productsGridPain" prefHeight="600.0" prefWidth="983.0">
+                                <GridPane fx:id="productsGridPain" prefHeight="600.0" prefWidth="983.0" stylesheets="@Mainmenu.css">
                                     <columnConstraints>
                                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="246.0" />
                                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="246.0" />
@@ -44,35 +45,37 @@
                 </ScrollPane>
             </children>
         </VBox>
-        <VBox fx:id="optionsVBox" prefHeight="600.0" prefWidth="200.0">
+        <VBox fx:id="optionsVBox" prefHeight="600.0" prefWidth="200.0" stylesheets="@Mainmenu.css">
             <children>
-                <VBox fx:id="treeViewVBox" prefHeight="56.0" prefWidth="200.0">
+                <VBox fx:id="treeViewVBox" prefHeight="56.0" prefWidth="200.0" stylesheets="@Mainmenu.css">
                     <children>
                         <Pane fx:id="treeViewPane" prefHeight="59.0" prefWidth="200.0">
                             <children>
-                                <TreeView fx:id="categoryTreeView" layoutX="10.0" layoutY="12.0" prefHeight="38.0" prefWidth="180.0" />
+                                <TreeView fx:id="categoryTreeView" layoutX="10.0" layoutY="12.0" prefHeight="38.0" prefWidth="180.0" styleClass="treeView" stylesheets="@Mainmenu.css" />
                             </children>
                         </Pane>
                     </children>
                 </VBox>
-                <VBox fx:id="filterAndOffVbox" prefHeight="543.0" prefWidth="200.0">
+                <VBox fx:id="filterAndOffVbox" prefHeight="543.0" prefWidth="200.0" stylesheets="@Mainmenu.css">
                     <children>
-                        <Pane fx:id="filterAndOffPane" prefHeight="545.0" prefWidth="200.0">
+                        <Pane fx:id="filterAndOffPane" prefHeight="545.0" prefWidth="200.0" stylesheets="@Mainmenu.css">
                             <children>
-                                <ComboBox fx:id="productSortComboBox" layoutX="32.0" layoutY="114.0" prefWidth="150.0" />
-                                <TextArea fx:id="nameFilterTextArea" layoutX="33.0" layoutY="150.0" prefHeight="31.0" prefWidth="149.0" promptText="search name" />
-                                <TextField fx:id="brandSearchTextField" layoutX="32.0" layoutY="200.0" prefHeight="31.0" prefWidth="149.0" promptText="SEARCH BRAND" />
-                                <CheckBox fx:id="offsCheckBox" layoutX="24.0" layoutY="356.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="offs" />
-                                <ComboBox fx:id="offSortCombowBox" layoutX="24.0" layoutY="391.0" prefWidth="150.0" />
-                                <Label fx:id="offSortLabel" layoutX="114.0" layoutY="360.0" prefHeight="17.0" prefWidth="60.0" text="sort " />
-                                <Label fx:id="startOffsDateLabel" layoutX="14.0" layoutY="423.0" prefHeight="17.0" prefWidth="60.0" text="start date" />
-                                <Label fx:id="endOffsDateLabel" layoutX="14.0" layoutY="474.0" prefHeight="17.0" prefWidth="60.0" text="end date" />
-                                <DatePicker fx:id="startOffsDateDatePicker" layoutX="12.0" layoutY="449.0" />
-                                <DatePicker fx:id="endOffsDateDatePicker" layoutX="13.0" layoutY="498.0" />
-                                <Label fx:id="productLabel" layoutX="32.0" layoutY="86.0" prefHeight="17.0" prefWidth="60.0" text="product" />
-                                <Label fx:id="productSortLabel" layoutX="127.0" layoutY="86.0" prefHeight="17.0" prefWidth="60.0" text="sort " />
-                                <ColorPicker fx:id="backgroundColorPicker" layoutX="43.0" layoutY="42.0" />
-                                <Label fx:id="chooseBackgroundLabel" layoutX="28.0" layoutY="14.0" prefHeight="17.0" prefWidth="157.0" text="choose your background" />
+                                <ComboBox fx:id="productSortComboBox" layoutX="32.0" layoutY="114.0" prefWidth="150.0" stylesheets="@Mainmenu.css" />
+                                <TextArea fx:id="nameFilterTextArea" layoutX="33.0" layoutY="150.0" prefHeight="31.0" prefWidth="149.0" promptText="search name" stylesheets="@Mainmenu.css" />
+                                <TextField fx:id="brandSearchTextField" layoutX="32.0" layoutY="200.0" prefHeight="31.0" prefWidth="149.0" promptText="SEARCH BRAND" stylesheets="@Mainmenu.css" />
+                                <CheckBox fx:id="offsCheckBox" layoutX="24.0" layoutY="318.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" stylesheets="@Mainmenu.css" text="offs" />
+                                <ComboBox fx:id="offSortCombowBox" layoutX="24.0" layoutY="355.0" prefWidth="150.0" stylesheets="@Mainmenu.css" />
+                                <Label fx:id="offSortLabel" layoutX="107.0" layoutY="322.0" prefHeight="17.0" prefWidth="60.0" stylesheets="@Mainmenu.css" text="sort " />
+                                <Label fx:id="startOffsDateLabel" layoutX="13.0" layoutY="403.0" prefHeight="17.0" prefWidth="60.0" stylesheets="@Mainmenu.css" text="start date" />
+                                <Label fx:id="endOffsDateLabel" layoutX="13.0" layoutY="465.0" prefHeight="17.0" prefWidth="60.0" stylesheets="@Mainmenu.css" text="end date" />
+                                <DatePicker fx:id="startOffsDateDatePicker" layoutX="12.0" layoutY="434.0" stylesheets="@Mainmenu.css" />
+                                <DatePicker fx:id="endOffsDateDatePicker" layoutX="13.0" layoutY="492.0" stylesheets="@Mainmenu.css" />
+                                <Label fx:id="productLabel" layoutX="32.0" layoutY="86.0" prefHeight="17.0" prefWidth="60.0" stylesheets="@Mainmenu.css" text="product" />
+                                <Label fx:id="productSortLabel" layoutX="127.0" layoutY="86.0" prefHeight="17.0" prefWidth="60.0" stylesheets="@Mainmenu.css" text="sort " />
+                                <ColorPicker fx:id="backgroundColorPicker" layoutX="43.0" layoutY="42.0" stylesheets="@Mainmenu.css" />
+                                <Label fx:id="chooseBackgroundLabel" layoutX="28.0" layoutY="14.0" prefHeight="17.0" prefWidth="157.0" stylesheets="@Mainmenu.css" text="choose your background" />
+                        <Label fx:id="priceLable" layoutX="19.0" layoutY="255.0" prefHeight="17.0" prefWidth="68.0" stylesheets="@Mainmenu.css" text="price" />
+                        <Slider fx:id="priceRangeSlider" layoutX="13.0" layoutY="279.0" max="10000.0" pickOnBounds="false" prefHeight="14.0" prefWidth="174.0" snapToTicks="true" stylesheets="@Mainmenu.css" />
                             </children>
                         </Pane>
                     </children>
