--- a/src/main/java/view/gui/Mainmenu.css
+++ b/src/main/java/view/gui/Mainmenu.css
@@ -1,9 +1,7 @@
 .treeView {
-   /* -fx-background-radius: 30;
-    -fx-background-insets: 0, 1, 2, 3, 0;
-    -fx-font-size: 14px;
-    -fx-padding: 10 20 10 20;*/
+    -fx-background-color: #454545;
 }
 .label1{
+    -fx-background-color: #989898;
 
 }
