--- a/src/main/resources/gui/fxml/menu.fxml
+++ b/src/main/resources/gui/fxml/menu.fxml
@@ -1,137 +1,150 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.shape.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ColorPicker?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TreeView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="980.0" prefWidth="1800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <top>
-      <VBox prefHeight="200.0" prefWidth="1800.0" BorderPane.alignment="CENTER">
-         <children>
-            <HBox prefHeight="100.0" prefWidth="1803.0" />
-            <HBox prefHeight="113.0" prefWidth="1800.0">
-               <children>
-                  <HBox alignment="CENTER" prefHeight="106.0" prefWidth="636.0">
-                     <children>
-                        <TextField prefHeight="39.0" prefWidth="601.0" promptText="search name">
-                           <HBox.margin>
-                              <Insets bottom="10.0" left="10.0" right="19.0" top="10.0" />
-                           </HBox.margin>
-                           <padding>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </padding>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.MainPageController">
+    <top>
+        <VBox prefHeight="134.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
+            <children>
+                <HBox fx:id="toolbarHBox" prefHeight="90.0" prefWidth="1200.0" />
+                <HBox prefHeight="39.0" prefWidth="1200.0">
+                    <children>
+                        <HBox alignment="CENTER" prefHeight="106.0" prefWidth="636.0">
+                            <children>
+                                <TextField fx:id="searchTextFieldForName" prefHeight="39.0" prefWidth="601.0" promptText="search name">
+                                    <HBox.margin>
+                                        <Insets bottom="10.0" left="10.0" right="19.0" top="10.0" />
+                                    </HBox.margin>
+                                    <padding>
+                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </padding>
+                                </TextField>
+                            </children>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="106.0" prefWidth="104.0">
+                            <children>
+                                <ImageView fx:id="searchIconImage" fitHeight="56.0" fitWidth="78.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../pic/icons8-search-480.png" />
+                                    </image>
+                                </ImageView>
+                            </children>
+                        </HBox>
+                        <HBox alignment="TOP_RIGHT" prefHeight="63.0" prefWidth="514.0">
+                            <children>
+                                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                    <children>
+                                        <CheckBox fx:id="offCheckBox" mnemonicParsing="false" text="offs" />
+                                    </children>
+                                </HBox>
+                                <HBox prefHeight="105.0" prefWidth="220.0">
+                                    <children>
+                                        <TreeView fx:id="categoriesTreeView" prefHeight="105.0" prefWidth="228.0" />
+                                    </children>
+                                </HBox>
+                                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                    <children>
+                                        <VBox prefHeight="104.0" prefWidth="211.0">
+                                            <children>
+                                                <HBox alignment="CENTER" prefHeight="96.0" prefWidth="200.0">
+                                                    <children>
+                                                        <Label prefHeight="27.0" prefWidth="180.0" text="choose background" />
+                                                    </children>
+                                                </HBox>
+                                                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                                    <children>
+                                                        <ColorPicker fx:id="chooseBackgroundColorPicker" />
+                                                    </children>
+                                                </HBox>
+                                            </children>
+                                        </VBox>
+                                    </children>
+                                </HBox>
+                            </children>
+                        </HBox>
+                    </children>
+                </HBox>
+            </children>
+        </VBox>
+    </top>
+    <left>
+        <VBox prefHeight="466.0" prefWidth="215.0" BorderPane.alignment="CENTER">
+            <children>
+                <VBox alignment="CENTER" prefHeight="120.0" prefWidth="260.0">
+                    <children>
+                        <ComboBox fx:id="sortFieldComBowBox" prefHeight="39.0" prefWidth="243.0" />
+                    </children>
+                </VBox>
+                <VBox alignment="CENTER" prefHeight="113.0" prefWidth="260.0">
+                    <children>
+                        <ComboBox fx:id="isAcendingComBowBox" prefHeight="39.0" prefWidth="241.0" />
+                    </children>
+                </VBox>
+                <VBox alignment="CENTER" prefHeight="112.0" prefWidth="260.0">
+                    <children>
+                        <TextField fx:id="brandTextField" promptText="brand">
+                            <VBox.margin>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                            </VBox.margin>
+                            <padding>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                            </padding>
                         </TextField>
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER" prefHeight="106.0" prefWidth="104.0">
-                     <children>
-                        <ImageView fitHeight="86.0" fitWidth="95.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../Project/src/main/resources/gui/icons8-search-480.png" />
-                           </image>
-                        </ImageView>
-                     </children>
-                  </HBox>
-                  <HBox alignment="TOP_RIGHT" prefHeight="105.0" prefWidth="1063.0">
-                     <children>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                           <children>
-                              <CheckBox mnemonicParsing="false" text="offs" />
-                           </children>
-                        </HBox>
-                        <HBox prefHeight="105.0" prefWidth="220.0">
-                           <children>
-                              <TreeView prefHeight="105.0" prefWidth="228.0" />
-                           </children>
-                        </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                           <children>
-                              <VBox prefHeight="104.0" prefWidth="211.0">
-                                 <children>
-                                    <HBox alignment="CENTER" prefHeight="96.0" prefWidth="200.0">
-                                       <children>
-                                          <Label prefHeight="27.0" prefWidth="180.0" text="choose background" />
-                                       </children>
-                                    </HBox>
-                                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                                       <children>
-                                          <ColorPicker />
-                                       </children>
-                                    </HBox>
-                                 </children>
-                              </VBox>
-                           </children>
-                        </HBox>
-                     </children>
-                  </HBox>
-               </children>
-            </HBox>
-         </children>
-      </VBox>
-   </top>
-   <left>
-      <VBox prefHeight="780.0" prefWidth="260.0" BorderPane.alignment="CENTER">
-         <children>
-            <VBox alignment="CENTER" prefHeight="72.0" prefWidth="260.0">
-               <children>
-                  <ComboBox prefHeight="39.0" prefWidth="243.0" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="83.0" prefWidth="260.0">
-               <children>
-                  <TextField promptText="brand">
-                     <VBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </VBox.margin>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                  </TextField>
-               </children>
-            </VBox>
-            <VBox prefHeight="299.0" prefWidth="260.0">
-               <children>
-                  <VBox prefHeight="306.0" prefWidth="260.0">
-                     <children>
-                        <VBox alignment="CENTER" prefHeight="106.0" prefWidth="260.0">
-                           <children>
-                              <Label text="price" />
-                           </children>
+                    </children>
+                </VBox>
+                <VBox prefHeight="270.0" prefWidth="260.0">
+                    <children>
+                        <VBox prefHeight="274.0" prefWidth="260.0">
+                            <children>
+                                <VBox alignment="CENTER" prefHeight="158.0" prefWidth="260.0">
+                                    <children>
+                                        <Label text="price" />
+                                    </children>
+                                </VBox>
+                                <VBox fx:id="priceVBoxForSlider" alignment="CENTER" prefHeight="170.0" prefWidth="260.0" />
+                            </children>
                         </VBox>
-                        <VBox alignment="CENTER" prefHeight="196.0" prefWidth="260.0" />
-                     </children>
-                  </VBox>
-               </children>
-            </VBox>
-            <Region prefHeight="170.0" prefWidth="260.0" />
-            <VBox prefHeight="146.0" prefWidth="260.0" />
-         </children>
-      </VBox>
-   </left>
-   <center>
-      <ScrollPane prefHeight="742.0" prefWidth="1540.0" BorderPane.alignment="CENTER">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="726.0" prefWidth="1519.0">
-               <children>
-                  <GridPane prefHeight="726.0" prefWidth="1518.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                  </GridPane>
-               </children>
-            </AnchorPane>
-        </content>
-      </ScrollPane>
-   </center>
+                    </children>
+                </VBox>
+            </children>
+        </VBox>
+    </left>
+    <center>
+        <ScrollPane prefHeight="742.0" prefWidth="1540.0" BorderPane.alignment="CENTER">
+            <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="726.0" prefWidth="1519.0">
+                    <children>
+                        <GridPane fx:id="productShowGridPane" prefHeight="726.0" prefWidth="1518.0">
+                            <columnConstraints>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            </columnConstraints>
+                            <rowConstraints>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            </rowConstraints>
+                        </GridPane>
+                    </children>
+                </AnchorPane>
+            </content>
+        </ScrollPane>
+    </center>
 </BorderPane>
