--- a/src/main/resources/gui/fxml/menu.fxml
+++ b/src/main/resources/gui/fxml/menu.fxml
@@ -5,6 +5,9 @@
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TreeView?>
@@ -29,13 +32,45 @@
                   <HBox prefHeight="56.0" prefWidth="271.0">
                      <children>
                                 <HBox alignment="CENTER" prefHeight="64.0" prefWidth="183.0">
-                                    <children>
-                                      <TextField fx:id="searchTextFieldForName" prefHeight="37.0" prefWidth="149.0" promptText="search name">
-                                          <padding>
-                                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                          </padding>
-                                      </TextField>
-                                    </children>
+                           <children>
+                              <MenuBar fx:id="categoryMenuBar" prefHeight="25.0" prefWidth="97.0">
+                                <menus>
+                                  <Menu mnemonicParsing="false" text="category">
+                                    <items>
+                                          <Menu mnemonicParsing="false" text="Unspecified Menu">
+                                            <items>
+                                                <Menu mnemonicParsing="false" text="Unspecified Menu">
+                                                  <items>
+                                                    <MenuItem mnemonicParsing="false" text="Action 1" />
+                                                      <Menu mnemonicParsing="false" text="Unspecified Menu">
+                                                        <items>
+                                                          <MenuItem mnemonicParsing="false" text="Action 1" />
+                                                            <Menu mnemonicParsing="false" text="Unspecified Menu">
+                                                              <items>
+                                                                <MenuItem mnemonicParsing="false" text="Action 1" />
+                                                                  <Menu mnemonicParsing="false" text="Unspecified Menu">
+                                                                    <items>
+                                                                      <MenuItem mnemonicParsing="false" text="Action 1" />
+                                                                    </items>
+                                                                  </Menu>
+                                                              </items>
+                                                            </Menu>
+                                                        </items>
+                                                      </Menu>
+                                                      <MenuItem mnemonicParsing="false" text="Unspecified Action" />
+                                                      <MenuItem mnemonicParsing="false" text="Unspecified Action" />
+                                                  </items>
+                                                </Menu>
+                                            </items>
+                                          </Menu>
+                                          <MenuItem mnemonicParsing="false" text="Unspecified Action" />
+                                      <MenuItem mnemonicParsing="false" text="Close" />
+                                          <MenuItem mnemonicParsing="false" text="Unspecified Action" />
+                                    </items>
+                                  </Menu>
+                                </menus>
+                              </MenuBar>
+                           </children>
                                 </HBox>
                               <HBox alignment="CENTER" prefHeight="106.0" prefWidth="104.0">
                                   <children>
@@ -101,9 +136,14 @@
                           <VBox fx:id="priceVBoxForSlider" alignment="CENTER" prefHeight="33.0" prefWidth="167.0" />
                     </children>
                 </VBox>
-            <VBox prefHeight="289.0" prefWidth="167.0">
+            <VBox prefHeight="174.0" prefWidth="167.0">
                <children>
-                            <TreeView fx:id="categoriesTreeView" prefHeight="303.0" prefWidth="167.0" />
+                          <TextField fx:id="searchTextFieldForName" prefHeight="37.0" prefWidth="149.0" promptText="search name">
+                              <padding>
+                                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                              </padding>
+                          </TextField>
+                            <TreeView fx:id="categoriesTreeView" prefHeight="206.0" prefWidth="167.0" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="46.0" prefWidth="167.0">
