--- a/src/main/resources/gui/fxml/Comment.fxml
+++ b/src/main/resources/gui/fxml/Comment.fxml
@@ -13,7 +13,7 @@
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="900.0" spacing="10.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.CommentController">
    <children>
-      <SplitPane dividerPositions="0.43639053254437865" orientation="VERTICAL" VBox.vgrow="ALWAYS">
+      <SplitPane dividerPositions="0.43639053254437865" orientation="VERTICAL" style="-fx-box-border: transparent;" VBox.vgrow="ALWAYS">
          <items>
             <VBox prefHeight="200.0" prefWidth="100.0" spacing="15.0">
                <children>
