--- a/src/main/resources/gui/fxml/Cart.fxml
+++ b/src/main/resources/gui/fxml/Cart.fxml
@@ -1,39 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
 <ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.CartControllerPage">
    <content>
       <VBox prefHeight="703.0" prefWidth="1278.0">
          <children>
             <VBox prefHeight="69.0" prefWidth="1265.0" style="-fx-background-color: #565656;" />
-            <VBox prefHeight="71.0" prefWidth="1265.0">
+            <VBox prefHeight="85.0" prefWidth="1278.0">
                <children>
-                  <HBox prefHeight="71.0" prefWidth="1054.0">
+                  <HBox prefHeight="90.0" prefWidth="1278.0">
                      <children>
-                        <VBox alignment="TOP_CENTER" prefHeight="119.0" prefWidth="164.0">
+                        <VBox alignment="TOP_CENTER" prefHeight="85.0" prefWidth="362.0">
                            <children>
-                              <VBox alignment="CENTER" prefHeight="57.0" prefWidth="164.0">
+                              <HBox alignment="CENTER" prefHeight="46.0" prefWidth="362.0">
                                  <children>
-                                    <Label prefHeight="29.0" prefWidth="82.0" text="total Price" />
+                                    <Label prefHeight="29.0" prefWidth="73.0" text="total Price" />
+                                    <Text fx:id="totalPriceText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="264.8033753633499" />
                                  </children>
-                              </VBox>
-                              <VBox alignment="CENTER" prefHeight="63.0" prefWidth="164.0">
+                              </HBox>
+                              <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="46.0" prefWidth="362.0">
                                  <children>
-                                    <Label fx:id="totalPriceLabel" prefHeight="41.0" prefWidth="85.0" text="8795797000" />
+                                    <Label prefHeight="29.0" prefWidth="83.0" text="Address" />
+                                    <TextField fx:id="addressTextField" prefHeight="25.0" prefWidth="260.0" />
                                  </children>
-                              </VBox>
+                              </HBox>
                            </children>
                         </VBox>
-                        <Button fx:id="purchaseButton" mnemonicParsing="false" onAction="#purchaseButtonClicked" prefHeight="70.0" prefWidth="104.0" text="purchase" />
+                        <HBox alignment="CENTER" prefHeight="85.0" prefWidth="537.0">
+                           <children>
+                              <Label fx:id="promoLabel" prefHeight="29.0" prefWidth="83.0" text="Promo" />
+                              <TextField fx:id="promoTextField" prefHeight="25.0" prefWidth="377.0" />
+                           </children>
+                        </HBox>
+                        <Region prefHeight="85.0" prefWidth="249.0" />
+                        <Button fx:id="purchaseButton" mnemonicParsing="false" onAction="#purchaseButtonClicked" prefHeight="70.0" prefWidth="104.0" text="purchase">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin></Button>
                      </children>
                   </HBox>
                </children></VBox>
-            <VBox fx:id="cartProductsVBox" prefHeight="574.0" prefWidth="1278.0" />
+            <VBox fx:id="cartProductsVBox" prefHeight="543.0" prefWidth="1278.0" />
          </children>
       </VBox>
    </content>
