--- a/src/main/resources/gui/fxml/AdminMenu.fxml
+++ b/src/main/resources/gui/fxml/AdminMenu.fxml
@@ -13,7 +13,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox prefHeight="0.0" prefWidth="124.0">
@@ -141,7 +140,7 @@
                         </VBox>
                         <VBox alignment="TOP_CENTER" prefHeight="396.0" prefWidth="145.0">
                            <children>
-                              <Button mnemonicParsing="false" text="Edit Info">
+                              <Button mnemonicParsing="false" style="-fx-background-color: #3369ff; -fx-display: inline-block; -fx-color: #FFFFFF;" text="Edit Info">
                                  <VBox.margin>
                                     <Insets top="50.0" />
                                  </VBox.margin>
