--- a/src/main/resources/gui/fxml/SingleProductForSellerPage.fxml
+++ b/src/main/resources/gui/fxml/SingleProductForSellerPage.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -13,152 +15,174 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="421.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-fx:controller="view.gui.SingleProductForSellerPageController">
-   <children>
-      <VBox prefHeight="400.0" prefWidth="320.0">
-         <children>
-            <ImageView fx:id="productImage" fitHeight="240.0" fitWidth="320.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../pic/background.jpg" />
-               </image>
-            </ImageView>
-            <Region prefHeight="25.0" prefWidth="320.0" />
-            <HBox alignment="CENTER" prefHeight="72.0" prefWidth="320.0">
-               <children>
-                  <HBox alignment="CENTER_LEFT" prefHeight="72.0" prefWidth="335.0" spacing="20.0">
-                     <children>
-                        <Label prefHeight="17.0" prefWidth="67.0" text="Category" />
-                        <Text fx:id="categoryText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="178.80338887373637" />
-                     </children>
-                     <opaqueInsets>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </opaqueInsets>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </HBox.margin>
-                  </HBox>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="76.0" prefWidth="320.0" spacing="20.0">
-               <opaqueInsets>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </opaqueInsets>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-               <children>
-                  <HBox alignment="CENTER_LEFT" prefHeight="52.0" prefWidth="309.0" spacing="20.0">
-                     <children>
-                        <Label prefHeight="17.0" prefWidth="61.0" text="Rate" />
-                        <Slider fx:id="productRateSlider" max="5.0" prefHeight="22.0" prefWidth="139.0" showTickLabels="true" showTickMarks="true" />
-                     </children>
-                     <opaqueInsets>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </opaqueInsets>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </HBox.margin>
-                  </HBox>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="249.0" prefHeight="72.0" prefWidth="320.0">
-               <children>
-                  <HBox alignment="CENTER_LEFT" prefHeight="72.0" prefWidth="335.0" spacing="20.0">
-                     <children>
-                        <Label prefHeight="17.0" prefWidth="67.0" text="State" />
-                        <Text fx:id="categoryText1" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="178.80338887373637" />
-                     </children>
-                     <opaqueInsets>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </opaqueInsets>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </HBox.margin>
-                  </HBox>
-               </children>
-            </HBox>
-         </children>
-      </VBox>
-      <VBox prefHeight="400.0" prefWidth="294.0">
-         <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="43.0" prefWidth="260.0" spacing="20.0">
-               <children>
-                  <Label fx:id="nameLabel" prefHeight="17.0" prefWidth="61.0" text="Name" />
-                  <TextField fx:id="nameTextField" prefHeight="25.0" prefWidth="195.0" />
-               </children>
-               <opaqueInsets>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </opaqueInsets>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </VBox.margin>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="20.0" layoutY="20.0" prefHeight="45.0" prefWidth="260.0" spacing="20.0">
-               <children>
-                  <Label prefHeight="17.0" prefWidth="61.0" text="Brand" />
-                  <TextField fx:id="brandTextField" prefHeight="25.0" prefWidth="195.0" />
-               </children>
-               <opaqueInsets>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </opaqueInsets>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </VBox.margin>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="29.0" prefWidth="260.0" spacing="20.0">
-               <children>
-                  <Label prefHeight="17.0" prefWidth="61.0" text="Amount" />
-                  <TextField fx:id="amountTextField" prefHeight="25.0" prefWidth="195.0" />
-               </children>
-               <opaqueInsets>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </opaqueInsets>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </VBox.margin>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="35.0" prefWidth="260.0" spacing="20.0">
-               <children>
-                  <Label prefHeight="17.0" prefWidth="61.0" text="Price" />
-                  <TextField fx:id="priceTextField" prefHeight="25.0" prefWidth="195.0" />
-               </children>
-               <opaqueInsets>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </opaqueInsets>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </VBox.margin>
-            </HBox>
-            <TextArea fx:id="descriptionTextArea" prefHeight="187.0" prefWidth="256.0" />
-            <HBox alignment="CENTER" prefHeight="75.0" prefWidth="280.0" spacing="40.0">
-               <children>
-                  <Button fx:id="uploadPhoto" mnemonicParsing="false" onAction="#uploadButtonClicked" text="Upload photo" />
-                  <Button fx:id="editButton" mnemonicParsing="false" onAction="#editButtonClicked" text="edit" />
-               </children>
-            </HBox>
-         </children>
-      </VBox>
-   </children>
-</HBox>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.SingleProductForSellerPageController">
+    <children>
+        <HBox prefHeight="413.0" prefWidth="600.0">
+            <children>
+                <VBox prefHeight="400.0" prefWidth="320.0">
+                    <children>
+                        <ImageView fx:id="productImage" fitHeight="240.0" fitWidth="320.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../pic/background.jpg" />
+                            </image>
+                        </ImageView>
+                        <Region prefHeight="25.0" prefWidth="320.0" />
+                        <HBox alignment="CENTER" prefHeight="72.0" prefWidth="320.0">
+                            <children>
+                                <HBox alignment="CENTER_LEFT" prefHeight="72.0" prefWidth="335.0" spacing="20.0">
+                                    <children>
+                                        <Label prefHeight="17.0" prefWidth="67.0" text="Category" />
+                                        <Text fx:id="categoryText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="178.80338887373637" />
+                                    </children>
+                                    <opaqueInsets>
+                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </opaqueInsets>
+                                    <padding>
+                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </padding>
+                                    <HBox.margin>
+                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </HBox.margin>
+                                </HBox>
+                            </children>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" prefHeight="76.0" prefWidth="320.0" spacing="20.0">
+                            <opaqueInsets>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                            </opaqueInsets>
+                            <padding>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                            </padding>
+                            <children>
+                                <HBox alignment="CENTER_LEFT" prefHeight="52.0" prefWidth="309.0" spacing="20.0">
+                                    <children>
+                                        <Label prefHeight="17.0" prefWidth="61.0" text="Rate" />
+                                        <Slider fx:id="productRateSlider" max="5.0" prefHeight="22.0" prefWidth="139.0" showTickLabels="true" showTickMarks="true" />
+                                    </children>
+                                    <opaqueInsets>
+                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </opaqueInsets>
+                                    <padding>
+                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </padding>
+                                    <HBox.margin>
+                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </HBox.margin>
+                                </HBox>
+                            </children>
+                        </HBox>
+                        <HBox alignment="CENTER" layoutX="10.0" layoutY="249.0" prefHeight="72.0" prefWidth="320.0">
+                            <children>
+                                <HBox alignment="CENTER_LEFT" prefHeight="37.0" prefWidth="345.0" spacing="20.0">
+                                    <children>
+                                        <Label prefHeight="17.0" prefWidth="67.0" text="State" />
+                                        <Text fx:id="categoryText1" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="178.80338887373637" />
+                                    </children>
+                                    <opaqueInsets>
+                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </opaqueInsets>
+                                    <padding>
+                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </padding>
+                                    <HBox.margin>
+                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </HBox.margin>
+                                </HBox>
+                            </children>
+                        </HBox>
+                    </children>
+                </VBox>
+                <VBox prefHeight="400.0" prefWidth="294.0">
+                    <children>
+                        <HBox alignment="CENTER_LEFT" prefHeight="43.0" prefWidth="260.0" spacing="20.0">
+                            <children>
+                                <Label fx:id="nameLabel" prefHeight="17.0" prefWidth="61.0" text="Name" />
+                                <TextField fx:id="nameTextField" prefHeight="25.0" prefWidth="195.0" />
+                            </children>
+                            <opaqueInsets>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                            </opaqueInsets>
+                            <padding>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                            </padding>
+                            <VBox.margin>
+                                <Insets left="10.0" right="10.0" />
+                            </VBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" layoutX="20.0" layoutY="20.0" prefHeight="45.0" prefWidth="260.0" spacing="20.0">
+                            <children>
+                                <Label prefHeight="17.0" prefWidth="61.0" text="Brand" />
+                                <TextField fx:id="brandTextField" prefHeight="25.0" prefWidth="195.0" />
+                            </children>
+                            <opaqueInsets>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                            </opaqueInsets>
+                            <padding>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                            </padding>
+                            <VBox.margin>
+                                <Insets left="10.0" right="10.0" />
+                            </VBox.margin>
+                        </HBox>
+                        <TextArea fx:id="descriptionTextArea" prefHeight="203.0" prefWidth="280.0" />
+                        <HBox alignment="CENTER_LEFT" prefHeight="29.0" prefWidth="260.0" spacing="20.0">
+                            <children>
+                                <Label prefHeight="17.0" prefWidth="61.0" text="Amount" />
+                                <TextField fx:id="amountTextField" prefHeight="25.0" prefWidth="195.0" />
+                            </children>
+                            <opaqueInsets>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                            </opaqueInsets>
+                            <padding>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                            </padding>
+                            <VBox.margin>
+                                <Insets left="10.0" right="10.0" />
+                            </VBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" prefHeight="35.0" prefWidth="260.0" spacing="20.0">
+                            <children>
+                                <Label prefHeight="17.0" prefWidth="61.0" text="Price" />
+                                <TextField fx:id="priceTextField" prefHeight="25.0" prefWidth="195.0" />
+                            </children>
+                            <opaqueInsets>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                            </opaqueInsets>
+                            <padding>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                            </padding>
+                            <VBox.margin>
+                                <Insets left="10.0" right="10.0" />
+                            </VBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="75.0" prefWidth="280.0" spacing="40.0">
+                            <children>
+                                <Button fx:id="uploadPhoto" mnemonicParsing="false" onAction="#uploadButtonClicked" text="Upload photo" />
+                        <VBox prefHeight="59.0" prefWidth="137.0">
+                           <children>
+                                      <Button fx:id="editButton" mnemonicParsing="false" onAction="#editButtonClicked" prefHeight="25.0" prefWidth="116.0" text="edit seller info">
+                                 <padding>
+                                    <Insets bottom="5.0" />
+                                 </padding>
+                                 <VBox.margin>
+                                    <Insets bottom="5.0" />
+                                 </VBox.margin>
+                              </Button>
+                              <Button fx:id="productInfoEditButton" mnemonicParsing="false" onAction="#productInfoEditButtonClicked" prefHeight="25.0" prefWidth="115.0" text="edit product info " />
+                           </children>
+                        </VBox>
+                            </children>
+                        </HBox>
+                    </children>
+                </VBox>
+
+            </children>
+        </HBox>
+      <TableView prefHeight="200.0" prefWidth="200.0">
+        <columns>
+          <TableColumn fx:id="buyersTableView" prefWidth="598.6666666269302" text="Buyer" />
+        </columns>
+      </TableView>
+
+    </children>
+</VBox>
