--- a/src/main/resources/gui/fxml/TableOfOrdersForBuyer.fxml
+++ b/src/main/resources/gui/fxml/TableOfOrdersForBuyer.fxml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 
-<TableView prefHeight="333.0" prefWidth="568.0">
+<TableView prefHeight="333.0" prefWidth="568.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <columns>
         <TableColumn prefWidth="125.99995422363281" text="Buyer" />
         <TableColumn prefWidth="134.66664123535156" text="Date" />
         <TableColumn minWidth="6.0" prefWidth="102.0" text="price" />
-        <TableColumn prefWidth="247.33333333333337" text="Address" />
+        <TableColumn prefWidth="203.99996948242188" text="Address" />
     </columns>
 </TableView>
