--- a/src/main/resources/gui/fxml/PromoManager.fxml
+++ b/src/main/resources/gui/fxml/PromoManager.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -21,7 +22,7 @@
                         <Insets left="10.0" top="15.0" />
                      </HBox.margin>
                   </Label>
-                  <DatePicker>
+                  <DatePicker editable="false">
                      <HBox.margin>
                         <Insets left="60.0" top="10.0" />
                      </HBox.margin>
@@ -109,14 +110,18 @@
             </HBox>
          </children>
       </VBox>
-      <TableView prefHeight="720.0" prefWidth="757.0">
-        <columns>
-          <TableColumn prefWidth="108.0" text="Start Date" />
-          <TableColumn prefWidth="130.0" text="End Date" />
-            <TableColumn prefWidth="176.0" text="Code" />
-            <TableColumn prefWidth="121.0" text="Off Percentage" />
-            <TableColumn minWidth="0.0" prefWidth="218.0" text="Maximum Off" />
-        </columns>
-      </TableView>
+      <ScrollPane prefHeight="720.0" prefWidth="689.0">
+         <content>
+            <TableView prefHeight="400.0" prefWidth="684.0">
+              <columns>
+                <TableColumn prefWidth="126.0" text="Start Date" />
+                <TableColumn prefWidth="118.0" text="End Date" />
+                  <TableColumn prefWidth="132.0" text="Code" />
+                  <TableColumn prefWidth="89.0" text="Off Percentage" />
+                  <TableColumn prefWidth="218.0" text="Maximum Off" />
+              </columns>
+            </TableView>
+         </content>
+      </ScrollPane>
    </children>
 </HBox>
